prepocess/uv-preprocessed/uv.odin

addrinfo :: struct {
	ai_flags:     i32,
	ai_family:    i32,
	ai_socktype:  i32,
	ai_protocol:  i32,
	ai_addrlen:   socklen_t,
	ai_addr:      rawptr,
	ai_canonname: cstring,
	ai_next:      ^addrinfo,
}
cc_t :: u8
speed_t :: u32
tcflag_t :: u32
termios :: struct {
	c_iflag:  tcflag_t,
	c_oflag:  tcflag_t,
	c_cflag:  tcflag_t,
	c_lflag:  tcflag_t,
	c_line:   cc_t,
	c_cc:     [32]cc_t,
	c_ispeed: speed_t,
	c_ospeed: speed_t,
}
passwd :: struct {
	pw_name:   cstring,
	pw_passwd: cstring,
	pw_uid:    __uid_t,
	pw_gid:    __gid_t,
	pw_gecos:  cstring,
	pw_dir:    cstring,
	pw_shell:  cstring,
}
sem_t :: struct #raw_union {
	__size:  [32]i8,
	__align: i64,
}
sig_atomic_t :: __sig_atomic_t
sigval :: struct #raw_union {
	sival_int: i32,
	sival_ptr: rawptr,
}
__sigval_t :: sigval
_kill_struct_anon_5 :: struct {
	si_pid: __pid_t,
	si_uid: __uid_t,
}
_timer_struct_anon_6 :: struct {
	si_tid:     i32,
	si_overrun: i32,
	si_sigval:  __sigval_t,
}
_rt_struct_anon_7 :: struct {
	si_pid:    __pid_t,
	si_uid:    __uid_t,
	si_sigval: __sigval_t,
}
_sigchld_struct_anon_8 :: struct {
	si_pid:    __pid_t,
	si_uid:    __uid_t,
	si_status: i32,
	si_utime:  __clock_t,
	si_stime:  __clock_t,
}
_addr_bnd_struct_anon_9 :: struct {
	_lower: rawptr,
	_upper: rawptr,
}
_bounds_union_anon_10 :: struct #raw_union {
	_addr_bnd: _addr_bnd_struct_anon_9,
	_pkey:     __uint32_t,
}
_sigfault_struct_anon_11 :: struct {
	si_addr:     rawptr,
	si_addr_lsb: i16,
	_bounds:     _bounds_union_anon_10,
}
_sigpoll_struct_anon_12 :: struct {
	si_band: i64,
	si_fd:   i32,
}
_sigsys_struct_anon_13 :: struct {
	_call_addr: rawptr,
	_syscall:   i32,
	_arch:      u32,
}
_sifields_union_anon_14 :: struct #raw_union {
	_pad:      [28]i32,
	_kill:     _kill_struct_anon_5,
	_timer:    _timer_struct_anon_6,
	_rt:       _rt_struct_anon_7,
	_sigchld:  _sigchld_struct_anon_8,
	_sigfault: _sigfault_struct_anon_11,
	_sigpoll:  _sigpoll_struct_anon_12,
	_sigsys:   _sigsys_struct_anon_13,
}
siginfo_t :: struct {
	si_signo:  i32,
	si_errno:  i32,
	si_code:   i32,
	__pad0:    i32,
	_sifields: _sifields_union_anon_14,
}
sigval_t :: __sigval_t
_function_func_ptr_anon_15 :: #type proc "c" (param0: __sigval_t)
_sigev_thread_struct_anon_16 :: struct {
	_function:  _function_func_ptr_anon_15,
	_attribute: ^pthread_attr_t,
}
_sigev_un_union_anon_17 :: struct #raw_union {
	_pad:          [12]i32,
	_tid:          __pid_t,
	_sigev_thread: _sigev_thread_struct_anon_16,
}
sigevent :: ^^^rawptr
sigevent_t :: sigevent
__sighandler_t :: #type proc "c" (param0: i32)
sig_t :: __sighandler_t
sa_sigaction_func_ptr_anon_18 :: #type proc "c" (param0: i32, param1: ^siginfo_t, param2: rawptr)
__sigaction_handler_union_anon_19 :: struct #raw_union {
	sa_handler:   __sighandler_t,
	sa_sigaction: sa_sigaction_func_ptr_anon_18,
}
sa_restorer_func_ptr_anon_20 :: #type proc "c" ()
sigaction :: struct {
	__sigaction_handler: __sigaction_handler_union_anon_19,
	sa_mask:             __sigset_t,
	sa_flags:            i32,
	sa_restorer:         sa_restorer_func_ptr_anon_20,
}
_fpx_sw_bytes :: struct {
	magic1:            __uint32_t,
	extended_size:     __uint32_t,
	xstate_bv:         __uint64_t,
	xstate_size:       __uint32_t,
	__glibc_reserved1: [7]__uint32_t,
}
_fpreg :: struct {
	significand: [4]u16,
	exponent:    u16,
}
_fpxreg :: struct {
	significand:       [4]u16,
	exponent:          u16,
	__glibc_reserved1: [3]u16,
}
_xmmreg :: struct {
	element: [4]__uint32_t,
}
_fpstate :: struct {
	cwd:               __uint16_t,
	swd:               __uint16_t,
	ftw:               __uint16_t,
	fop:               __uint16_t,
	rip:               __uint64_t,
	rdp:               __uint64_t,
	mxcsr:             __uint32_t,
	mxcr_mask:         __uint32_t,
	_st:               [8]_fpxreg,
	_xmm:              [16]_xmmreg,
	__glibc_reserved1: [24]__uint32_t,
}
sigcontext :: struct {
	r8:          __uint64_t,
	r9:          __uint64_t,
	r10:         __uint64_t,
	r11:         __uint64_t,
	r12:         __uint64_t,
	r13:         __uint64_t,
	r14:         __uint64_t,
	r15:         __uint64_t,
	rdi:         __uint64_t,
	rsi:         __uint64_t,
	rbp:         __uint64_t,
	rbx:         __uint64_t,
	rdx:         __uint64_t,
	rax:         __uint64_t,
	rcx:         __uint64_t,
	rsp:         __uint64_t,
	rip:         __uint64_t,
	eflags:      __uint64_t,
	cs:          u16,
	gs:          u16,
	fs:          u16,
	__pad0:      u16,
	err:         __uint64_t,
	trapno:      __uint64_t,
	oldmask:     __uint64_t,
	cr2:         __uint64_t,
	__reserved1: [8]__uint64_t,
}
_xsave_hdr :: struct {
	xstate_bv:         __uint64_t,
	__glibc_reserved1: [2]__uint64_t,
	__glibc_reserved2: [5]__uint64_t,
}
_ymmh_state :: struct {
	ymmh_space: [64]__uint32_t,
}
_xstate :: struct {
	fpstate:    _fpstate,
	xstate_hdr: _xsave_hdr,
	ymmh:       _ymmh_state,
}
stack_t :: struct {
	ss_sp:    rawptr,
	ss_flags: i32,
	ss_size:  u64,
}
greg_t :: i64
gregset_t :: [23]greg_t
_libc_fpxreg :: struct {
	significand:       [4]u16,
	exponent:          u16,
	__glibc_reserved1: [3]u16,
}
_libc_xmmreg :: struct {
	element: [4]__uint32_t,
}
_libc_fpstate :: struct {
	cwd:               __uint16_t,
	swd:               __uint16_t,
	ftw:               __uint16_t,
	fop:               __uint16_t,
	rip:               __uint64_t,
	rdp:               __uint64_t,
	mxcsr:             __uint32_t,
	mxcr_mask:         __uint32_t,
	_st:               [8]_libc_fpxreg,
	_xmm:              [16]_libc_xmmreg,
	__glibc_reserved1: [24]__uint32_t,
}
fpregset_t :: ^_libc_fpstate
mcontext_t :: struct {
	gregs:       gregset_t,
	fpregs:      fpregset_t,
	__reserved1: [8]u64,
}
ucontext_t :: struct {
	uc_flags:     u64,
	uc_link:      ^ucontext_t,
	uc_stack:     stack_t,
	uc_mcontext:  mcontext_t,
	uc_sigmask:   sigset_t,
	__fpregs_mem: _libc_fpstate,
	__ssp:        [4]u64,
}
sigstack :: struct {
	ss_sp:      rawptr,
	ss_onstack: i32,
}
sched_param :: struct {
	sched_priority: i32,
}
__cpu_mask :: u64
cpu_set_t :: struct {
	__bits: [16]__cpu_mask,
}
tm :: struct {
	tm_sec:    i32,
	tm_min:    i32,
	tm_hour:   i32,
	tm_mday:   i32,
	tm_mon:    i32,
	tm_year:   i32,
	tm_wday:   i32,
	tm_yday:   i32,
	tm_isdst:  i32,
	tm_gmtoff: i64,
	tm_zone:   cstring,
}
itimerspec :: struct {
	it_interval: timespec,
	it_value:    timespec,
}
__locale_data :: ^^^rawptr
__locale_struct :: struct {
	__locales:       ^[13][^]__locale_data,
	__ctype_b:       ^u16,
	__ctype_tolower: ^i32,
	__ctype_toupper: ^i32,
	__names:         [13]cstring,
}
__locale_t :: ^__locale_struct
locale_t :: __locale_t
__jmp_buf :: [8]i64
__jmp_buf_tag :: struct {
	__jmpbuf:         __jmp_buf,
	__mask_was_saved: i32,
	__saved_mask:     __sigset_t,
}
__routine_func_ptr_anon_21 :: #type proc "c" (param0: rawptr)
_pthread_cleanup_buffer :: struct {
	__routine:    __routine_func_ptr_anon_21,
	__arg:        rawptr,
	__canceltype: i32,
	__prev:       ^_pthread_cleanup_buffer,
}
__start_routine_func_ptr_anon_22 :: #type proc "c" (param0: rawptr) -> rawptr
__init_routine_func_ptr_anon_23 :: #type proc "c" ()
__cancel_jmp_buf_tag :: struct {
	__cancel_jmp_buf: __jmp_buf,
	__mask_was_saved: i32,
}
__pthread_unwind_buf_t :: struct {
	__cancel_jmp_buf: [1]__cancel_jmp_buf_tag,
	__pad:            [4]rawptr,
}
__cancel_routine_func_ptr_anon_24 :: #type proc "c" (param0: rawptr)
__pthread_cleanup_frame :: struct {
	__cancel_routine: __cancel_routine_func_ptr_anon_24,
	__cancel_arg:     rawptr,
	__do_it:          i32,
	__cancel_type:    i32,
}
__destr_function_func_ptr_anon_25 :: #type proc "c" (param0: rawptr)
__prepare_func_ptr_anon_26 :: #type proc "c" ()
__parent_func_ptr_anon_27 :: #type proc "c" ()
__child_func_ptr_anon_28 :: #type proc "c" ()
work_func_ptr_anon_29 :: #type proc "c" (w: ^uv__work)
done_func_ptr_anon_30 :: #type proc "c" (w: ^uv__work, status: i32)
active_reqs_union_anon_53 :: struct #raw_union {
	unused: rawptr,
	count:  u32,
}
uv_mutex_t :: pthread_mutex_t
uv_rwlock_t :: pthread_rwlock_t
async_unused_func_ptr_anon_54 :: #type proc "c" ()
timer_heap_struct_anon_55 :: struct {
	min:   rawptr,
	nelts: u32,
}
uv_loop_s :: struct {
	data:                 rawptr,
	active_handles:       u32,
	handle_queue:         uv__queue,
	active_reqs:          active_reqs_union_anon_53,
	internal_fields:      rawptr,
	stop_flag:            u32,
	flags:                u64,
	backend_fd:           i32,
	pending_queue:        uv__queue,
	watcher_queue:        uv__queue,
	watchers:             ^[^]uv__io_t,
	nwatchers:            u32,
	nfds:                 u32,
	wq:                   uv__queue,
	wq_mutex:             uv_mutex_t,
	wq_async:             uv_async_t,
	cloexec_lock:         uv_rwlock_t,
	closing_handles:      [^]uv_handle_t,
	process_handles:      uv__queue,
	prepare_handles:      uv__queue,
	check_handles:        uv__queue,
	idle_handles:         uv__queue,
	async_handles:        uv__queue,
	async_unused:         async_unused_func_ptr_anon_54,
	async_io_watcher:     uv__io_t,
	async_wfd:            i32,
	timer_heap:           timer_heap_struct_anon_55,
	timer_counter:        u64,
	time:                 u64,
	signal_pipefd:        [2]i32,
	signal_io_watcher:    uv__io_t,
	child_watcher:        uv_signal_t,
	emfile_fd:            i32,
	inotify_read_watcher: uv__io_t,
	inotify_watchers:     rawptr,
	inotify_fd:           i32,
}
uv__work :: struct {
	work: work_func_ptr_anon_29,
	done: done_func_ptr_anon_30,
	loop: ^uv_loop_s,
	wq:   uv__queue,
}
uv__io_s :: struct {
	cb:            uv__io_cb,
	pending_queue: uv__queue,
	watcher_queue: uv__queue,
	pevents:       u32,
	events:        u32,
	fd:            i32,
}
uv__io_cb :: #type proc "c" (loop: ^uv_loop_s, w: ^uv__io_s, events: u32)
uv__io_t :: uv__io_s
uv_buf_t :: struct {
	base: cstring,
	len:  u64,
}
uv_file :: i32
uv_os_sock_t :: i32
uv_os_fd_t :: i32
uv_pid_t :: pid_t
uv_once_t :: pthread_once_t
uv_thread_t :: pthread_t
uv_sem_t :: sem_t
uv_cond_t :: pthread_cond_t
uv_key_t :: pthread_key_t
uv_barrier_t :: pthread_barrier_t
uv_gid_t :: gid_t
uv_uid_t :: uid_t
uv__dirent_t :: dirent
uv_lib_t :: struct {
	handle: rawptr,
	errmsg: cstring,
}
